Ajout : Champ => age,email,adresse,ville,code_postal,telephone

--- a/Selim/connexion.html
+++ b/Selim/connexion.html
@@ -62,26 +62,32 @@
 
 
             <!-- demande du metier -->
-            <label for="metier">Métier:</label>
-            <select name="metier" id="metier" required>
-                <option value="cadre">Cadre</option>
-                <option value="fonctionnaire">Fonctionnaire</option>
-                <option value="ouvrier">Ouvrier</option>
-                <option value="pdg">PDG</option>
-            </select>
+            <label for="email">email:</label>
+            <input type="text" name="email" id="email" placeholder="Your email" required>
             <br><br>
 
 
-            <!-- demande du pays -->
-            <label for="pays">Pays de Résidence:</label>
-            <select name="pays" id="pays" required>
-                <option value="France">France</option>
-                <option value="Italie">Autre</option>
-                <option value="Espagne">France</option>
-                <option value="Angleterre">Autre</option>
-                <option value="Allemagne">France</option>
-            </select>
+            <!-- demande du adresse -->
+            <label for="adresse">adresse:</label>
+            <input type="text" name="adresse" id="adresse" placeholder="Your adresse" required>
             <br><br>
+
+            <!-- demande du ville -->
+            <label for="ville">ville:</label>
+            <input type="text" name="ville" id="ville" placeholder="Your city" required>
+            <br><br>
+
+            <!-- demande du code postal -->
+            <label for="code_postal">code_postal:</label>
+            <input type="text" name="code_postal" id="code_postal" placeholder="Your zipcount" required>
+            <br><br>
+
+            <!-- demande du telephone -->
+            <label for="telephone">telephone:</label>
+            <input type="text" name="telephone" id="telephone" placeholder="Your phone number" required>
+            <br><br>
+
+
             <a href="Menu.html"><button>Inscription</button></a>
         </form>
     </section>
