--- a/Selim/Page Inscription/connexion.html
+++ b/Selim/Page Inscription/connexion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>rien</title>
+    <title>Inscription</title>
     <link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
