--- a/Selim/Page Inscription/connexion.html
+++ b/Selim/Page Inscription/connexion.html
@@ -12,34 +12,45 @@
     <div class="input-container ic1">
         <input id="prenom" class="input" type="text" placeholder=" " />
         <div class="cut"></div>
-        <label for="prenom" class="placeholder">prenom</label>
+        <label for="prenom" class="placeholder">Prenom</label>
     </div>
 
-    <div class="input-container ic2">
+    <div class="input-container ic1">
         <input id="nom" class="input" type="text" placeholder=" " />
         <div class="cut"></div>
         <label for="nom" class="placeholder">Nom</label>
     </div>
 
-    <div class="input-container ic2">
+    <div class="input-container ic1">
         <input id="email" class="input" type="text" placeholder=" " />
         <div class="cut cut-short"></div>
         <label for="email" class="placeholder">Email</label>
     </div>
 
-    <div class="input-container ic2">
-        <input id="firstname" class="input" type="text" placeholder=" " />
+    <div class="input-container ic1">
+        <input id="age" class="input" type="text" placeholder=" " />
         <div class="cut"></div>
-        <label for="firstname" class="placeholder">First name</label>
+        <label for="age" class="placeholder">Age</label>
     </div>
 
-    <div class="input-container ic2">
-        <input id="lastname" class="input" type="text" placeholder=" " />
+    <div class="input-container ic1">
+        <input id="telephone" class="input" type="text" placeholder=" " />
         <div class="cut"></div>
-        <label for="lastname" class="placeholder">Last name</label>
+        <label for="telephone" class="placeholder">Telephone</label>
     </div>
 
-    <button type="text" class="submit">Submit</button>
+    <div class="input-container ic1">
+        <input id="adresse" class="input" type="text" placeholder=" " />
+        <div class="cut"></div>
+        <label for="adresse" class="placeholder">Adresse</label>
+    </div>
+
+    <div class="input-container ic1">
+        <input id="ville" class="input" type="text" placeholder=" " />
+        <div class="cut"></div>
+        <label for="ville" class="placeholder">Ville</label>
+    </div>
+    <button type="text" class="submit">Je m'inscris</button>
 </div>
 </body>
 </html>
