--- a/Ahad/Cinema.html
+++ b/Ahad/Cinema.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Cinema Dugny</title>
+    <title>Slide Navbar</title>
+    <link rel="stylesheet" type="text/css" href="connexion.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="main">
+    <input type="checkbox" id="chk" aria-hidden="true">
 
+    <div class="signup">
+        <form>
+            <label for="chk" aria-hidden="true">Connexion</label>
+            <input type="email" name="email" placeholder="Email" required="">
+            <input type="password" name="pswd" placeholder="Mot de passe" required="">
+            <button>Connexion</button>
+        </form>
+    </div>
+
+</div>
 </body>
 </html>
