Ajout du mot de passe et ajustement bulle

--- a/Connexion_Inscription/inscription.html
+++ b/Connexion_Inscription/inscription.html
@@ -12,13 +12,13 @@
 
     <div class="input-container ic1">
         <input id="prenom" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
+        <div class="cut cut-prenom"></div>
         <label for="prenom" class="placeholder">Prenom</label>
     </div>
 
     <div class="input-container ic1">
         <input id="nom" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
+        <div class="cut cut-nom"></div>
         <label for="nom" class="placeholder">Nom</label>
     </div>
 
@@ -30,7 +30,7 @@
 
     <div class="input-container ic1">
         <input id="age" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
+        <div class="cut cut-age"></div>
         <label for="age" class="placeholder">Age</label>
     </div>
 
@@ -42,15 +42,22 @@
 
     <div class="input-container ic1">
         <input id="adresse" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
+        <div class="cut cut-adresse"></div>
         <label for="adresse" class="placeholder">Adresse</label>
     </div>
 
     <div class="input-container ic1">
         <input id="ville" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
+        <div class="cut cut-ville"></div>
         <label for="ville" class="placeholder">Ville</label>
     </div>
+
+    <div class="input-container ic1">
+        <input id="mdp" class="input" type="text" placeholder=" " />
+        <div class="cut cut-mdp"></div>
+        <label for="mdp" class="placeholder">Mot de passe</label>
+    </div>
+
     <button type="text" class="submit">Je m'inscris</button>
 </div>
 </body>
