Ajout : Champs mot de passe

--- a/Connexion_Inscription/inscription.html
+++ b/Connexion_Inscription/inscription.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="input-container ic1">
-        <input id="mdp" class="input" type="text" placeholder=" " />
+        <input id="mdp" class="input" type="passsword" placeholder=" " />
         <div class="cut cut-mdp"></div>
         <label for="mdp" class="placeholder">Mot de passe</label>
     </div>
