--- a/Connexion_Inscription/Cinema.html
+++ b/Connexion_Inscription/Cinema.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Connexion</title>
@@ -23,8 +23,8 @@
         <label for="nom" class="placeholder">Mot de Passe</label>
     </div>
 
-    <button type="text" class="submit">Se connecter</button>
-    <a href="connexion.html">Créer un compte</a>.</br>
+    <button type="text" class="submit">Se connecter<a href="menu_html.html"></a></button>
+    <a href="inscription.html">Créer un compte</a>.</br>
     </form>
 
 </div>
