--- a/Connexion_Inscription/Cinema.html
+++ b/Connexion_Inscription/Cinema.html
@@ -6,27 +6,28 @@
     <link rel="stylesheet" type="text/css" href="connexion.css">
 </head>
 <body>
+<form method="post" action="Connection.php">
 
 <div class="form">
     <br>
     <div class="title">Connexion</div>
 
     <div class="input-container ic1">
-        <input id="prenom" class="input" type="text" placeholder=" " />
+        <input id="prenom" class="input" type="text" placeholder=" " name="email" />
         <div class="cut"></div>
         <label for="prenom" class="placeholder">Email</label>
     </div>
 
     <div class="input-container ic1">
-        <input id="nom" class="input" type="text" placeholder=" " />
+        <input id="nom" class="input" type="text" placeholder=" " name="mdp" />
         <div class="cut"></div>
         <label for="nom" class="placeholder">Mot de Passe</label>
     </div>
 
     <button type="text" class="submit">Se connecter<a href="menu_html.html"></a></button>
     <a href="inscription.html">Créer un compte</a>.</br>
-    </form>
 
 </div>
+</form>
 </body>
 </html>
