--- a/Connexion_Inscription/inscription.html
+++ b/Connexion_Inscription/inscription.html
@@ -53,12 +53,13 @@
     </div>
 
     <div class="input-container ic1">
-        <input id="mdp" class="input" type="passsword" placeholder=" " />
+        <input id="mdp" class="input" type="password" placeholder=" " />
         <div class="cut cut-mdp"></div>
         <label for="mdp" class="placeholder">Mot de passe</label>
     </div>
 
-    <button type="text" class="submit">Je m'inscris</button>
+    <button type="text" class="submit" onclick="window.location.href='inscription_html.html';">Je m'inscris</button>
+
 </div>
 </body>
 </html>
