Nouvelle page html mauvais mdp

--- a/Connexion_Inscription/menu_html.html
+++ b/Connexion_Inscription/menu_html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu</title>
-    <link rel="stylesheet" type="text/css" href="menu_css.css">
+    <link rel="stylesheet" type="text/css" href="../Selim/test/menu/menu_css.css">
 </head>
 <body>
 <!-- Navbar -->
