--- a/Connexion_Inscription/Cinema.html
+++ b/Connexion_Inscription/Cinema.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Connexion</title>
-    <link rel="stylesheet" type="text/css" href="connexion.css">
+    <link rel="stylesheet" type="text/css" href="connexion_e.css">
 </head>
 <body>
 
@@ -18,12 +18,12 @@
     </div>
 
     <div class="input-container ic1">
-        <input id="nom" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
-        <label for="nom" class="placeholder">Mot de Passe</label>
+        <input id="mdp" class="input" type="password" placeholder=" " />
+        <div class="cut cut-mdp"></div>
+        <label for="mdp" class="placeholder">Mot de Passe</label>
     </div>
 
-    <button type="text" class="submit">Se connecter<a href="menu_html.html"></a></button>
+    <button type="text" class="submit">Se connecter<></button>
     <a href="inscription.html">Créer un compte</a>.</br>
     </form>
 
