Ajout : Page de confirmation de la création du compte

--- a/Connexion_Inscription/inscription.html
+++ b/Connexion_Inscription/inscription.html
@@ -61,12 +61,8 @@
         <label for="mdp" class="placeholder">Mot de passe</label>
     </div>
 
-<<<<<<< HEAD
-    <button type="text" class="submit" onclick="window.location.href='inscription_html.html';">Je m'inscris</button>
+    <button type="submit" class="submit" onclick="window.location.href='inscription_html.html';">Je m'inscris</button>
 
-=======
-    <button type="submit" class="submit">Je m'inscris</button>
->>>>>>> 5090aa80e01abc73c28d2b19a024d428e220409b
 </div>
 </form>
 </body>
