--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription.html
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inscription</title>
-    <link rel="stylesheet" type="text/css" href="form.css">
+    <link rel="stylesheet" type="text/css" href="inscription.css">
 
 </head>
 <body>
@@ -56,7 +56,7 @@
 
     <div class="input-container ic1">
 
-        <input id="mdp" class="input" type="text" placeholder=" " name="mdp" />
+        <input id="mdp" class="input" type="password" placeholder=" " name="mdp" />
         <div class="cut cut-mdp"></div>
         <label for="mdp" class="placeholder">Mot de passe</label>
     </div>
