--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/Cinema.html
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/Cinema.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
     <link rel="stylesheet" type="text/css" href="connexion.css">
 </head>
 <body>
+
 <form method="post" action="Connection.php">
 
     <div class="form">
-        <br>
         <div class="title">Connexion</div>
 
         <div class="input-container ic1">
-            <input id="prenom" class="input" type="text" placeholder=" " name="email" />
+            <label for="email" class="field-description">Adresse e-mail :</label>
+            <input id="email" class="input" type="email" placeholder="Entrez votre adresse e-mail" name="email" required>
             <div class="cut"></div>
-            <label for="prenom" class="placeholder">Email</label>
         </div>
 
         <div class="input-container ic1">
-            <input id="nom" class="input" type="text" placeholder=" " name="mdp" />
+            <label for="mdp" class="field-description">Mot de passe :</label>
+            <input id="mdp" class="input" type="password" placeholder="Entrez votre mot de passe" name="mdp" required>
             <div class="cut"></div>
-            <label for="nom" class="placeholder">Mot de Passe</label>
         </div>
 
-        <button type="text" class="submit">Se connecter<a href="../../MENU/menu_html.html"></a></button>
-        <a href="../Page_inscription/inscription.html">Créer un compte</a>.</br>
-
+        <button type="submit" class="submit">Se connecter</button>
+        <a href="../../MENU/menu_html.html">Retour au menu</a>
+        <p>Vous n'avez pas de compte? <a href="../Page_inscription/inscription.html">Créer un compte</a>.</p>
     </div>
+
 </form>
+
 </body>
 </html>
+
