changement dans la page inscription

--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription_reussi.html
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_inscription/inscription_reussi.html
@@ -16,7 +16,7 @@
                 <h1>Inscription réussi</h1>
                 <h3>Félicitations ! Votre compte a été créé avec succès.<br></h3>
 
-                <form action="cinema.html" method="post">
+                <form action="...\Page_connexion\Cinema.html" method="post">
                 <input type="submit" value="Retour vers connexion">
                 </form>
 
