Fix : Bouton "cliquer ici" redirige vers la page inscription

--- a/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/Cinema.html
+++ b/Page_Cinema/CONNEXION_INSCRIPTION/Page_connexion/Cinema.html
@@ -1,6 +1,6 @@
 <body>
 <header>
-    <h1>Cinema VSA</h1>
+    <h1>Cinema</h1>
 </header>
 <main>
     <form id="login_form" class="form_class" action="Connection.php" method="post">
@@ -13,7 +13,7 @@
             <button class="submit_class" type="submit" form="login_form" onclick="return validarLogin()">Se connecter</button>
         </div>
         <div class="info_div">
-            <p>Pas encore de compte ? <a href="inscription.html">Cliquez ici</a></p>
+            <p>Pas encore de compte ? <a href="../Page_inscription/inscription.html">Cliquez ici</a></p>
         </div>
     </form>
 </main>
