--- a/Page_Cinema/ACCEUIL et NAVBAR/acceuil.html
+++ b/Page_Cinema/ACCEUIL et NAVBAR/acceuil.html
@@ -43,7 +43,7 @@
                 <!--Inscription/Connexion-->
                 <div class="d-flex flex-column flex-lg-row justify-content-center
                      align-items-center gap-3">
-                    <a href="connexion" class="text-black">Connexion</a>
+                    <a href="../CONNEXION_INSCRIPTION/Page_connexion/Cinema.html" class="text-black" >Connexion</a>
                     <a href="inscription" class="text-black
                       text-decoration-none px-3 py-1 rounded-4"
                     style="background-color: #FFFF33">Inscription</a>
