--- a/Page_Cinema/ACCEUIL et NAVBAR/acceuil.html
+++ b/Page_Cinema/ACCEUIL et NAVBAR/acceuil.html
@@ -44,9 +44,9 @@
                 <div class="d-flex flex-column flex-lg-row justify-content-center
                      align-items-center gap-3">
                     <a href="../CONNEXION_INSCRIPTION/Page_connexion/Cinema.html" class="text-black" >Connexion</a>
-                    <a href="inscription" class="text-black
+                    <a href="../CONNEXION_INSCRIPTION/Page_inscription/inscription.html" class="text-black
                       text-decoration-none px-3 py-1 rounded-4"
-                    style="background-color: #FFFF33">Inscription</a>
+                    style="background-color: #ffeaa6ff">Inscription</a>
                 </div>
             </div>
         </div>
