Mise a jour : Séparation du code php (envoie de donnée) au code html

--- a/Page_Cinema/MENU/Admin/film.html
+++ b/Page_Cinema/MENU/Admin/film.html
@@ -5,7 +5,7 @@
     <title>Film</title>
 </head>
 <body>
-<form method="post" action="">
+<form method="post" action="film.php">
     <table>
         <tr>
             <td>
@@ -52,21 +52,3 @@
 </form>
 </body>
 </html>
-
-<?php
-//VARIABLES
-$bdd = new PDO('mysql:host=localhost:3306;dbname=vsa_cinema;charset=utf8', 'root', '');
-$nom = $_POST['nom'];
-$desc = $_POST['desc'];
-$affiche = $_POST['aff'];
-$rea = $_POST['rea'];
-
-
-//CODE
-$requete = $bdd -> prepare('INSERT INTO film (nom,description,affiche,realisateur) VALUES (:nom, :description, :affiche, :realisateur)');
-$requete -> execute(array(
-    'nom' => $nom,
-    'description' => $desc,
-    'affiche' => $affiche,
-    'realisateur' => $rea,
-));
