--- a/Page_Cinema/MENU/Admin/film/film.html
+++ b/Page_Cinema/MENU/Admin/film/film.html
@@ -1,54 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Film</title>
+
+    <!--POLICE-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+    <!--CSS-->
+    <!--CSS/JS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="film.css">
+
 </head>
 <body>
-<form method="post" action="film.php">
-    <table>
-        <tr>
-            <td>
-                Nom du film :
-            </td>
-            <td>
-                <input type="text" name="nom" required>
-        </tr>
+<form method="post" action="film.php" class="section text-center">
+    <h4 class="mb-4 pb-3">Film</h4>
+    <div class="form-group">
+        <input type="text" name="nom" class="form-style" placeholder="Nom du film" autocomplete="off" required>
+        <i class="bi bi-film"></i>
+    </div>
+    <div class="form-group mt-2">
+        <input type="text" name="rea" class="form-style " placeholder="Réalisateur" autocomplete="off" required>
+        <i class="bi bi-person"></i>
+    </div>
 
-        <tr>
-            <td>
-                Description :
-            </td>
-            <td>
-                <textarea id="description" name="desc" rows="2" cols="20"></textarea>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                Affiche :
-            </td>
-            <td>
-                <textarea id="affiche" name="aff" rows="2" cols="20"></textarea>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                Réalisateur :
-            </td>
-            <td>
-                <input type="text" name="rea" required>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input type="submit" value="Ajouter">
-            </td>
-        </tr>
-
-    </table>
+    <div class="form-group mt-2">
+        <input type="text" name="desc" class="form-style" placeholder="Description" autocomplete="off" required>
+        <i class="bi bi-body-text"></i>
+    </div>
+    <div class="form-group mt-2">
+        <input type="text" name="aff" class="form-style" placeholder="Affiche" autocomplete="off" required>
+        <i class="bi bi-image"></i>
+    </div>
+    <input href="film.php" type="submit" class="btn mt-4 section text-center">
 </form>
 </body>
 </html>
