Mise a jour : Le boutton "Retour" se nomme "Retour au menu".

--- a/Page_Cinema/MENU/Admin/film/correct.html
+++ b/Page_Cinema/MENU/Admin/film/correct.html
@@ -22,7 +22,7 @@
                 <h1>Film ajouté</h1>
 
                 <form action="../menu/admin.html" method="post">
-                <input type="submit" value="Retour">
+                <input type="submit" value="Retour au menu">
                 </form>
 
             </div>
