MAJ : Ajout du chemin vers le tableau utilisateur via le boutton utilisateur.

--- a/Page_Cinema/MENU/Admin/menu/admin.html
+++ b/Page_Cinema/MENU/Admin/menu/admin.html
@@ -51,9 +51,9 @@
                             Données
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Utilisateur</a></li>
-                            <li><a class="dropdown-item" href="#">Film</a></li>
-                            <li><a class="dropdown-item" href="#">Salle</a></li>
+                            <li><a class="dropdown-item" href="../liste/utilisateur/data.php">Utilisateur</a></li>
+                            <li><a class="dropdown-item" href="">Film</a></li>
+                            <li><a class="dropdown-item" href="">Salle</a></li>
                         </ul>
                     </li>
 
