MAJ : Ajout du chemin vers le tableau reservation via le boutton reservation.

--- a/Page_Cinema/MENU/Admin/menu/admin.html
+++ b/Page_Cinema/MENU/Admin/menu/admin.html
@@ -54,6 +54,8 @@
                             <li><a class="dropdown-item" href="../liste/utilisateur/data.php">Utilisateur</a></li>
                             <li><a class="dropdown-item" href="">Film</a></li>
                             <li><a class="dropdown-item" href="">Salle</a></li>
+                            <li><a class="dropdown-item" href="../liste/reservation/data.php">Reservation</a></li>
+
                         </ul>
                     </li>
 
