MAJ : Correction du probléme

--- a/Page_Cinema/MENU/mm/test.html
+++ b/Page_Cinema/MENU/mm/test.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="testt.css">
     <form method="post" action="teste.php">
     <title>Cinéma Paradis</title>
+    </form>
 </head>
 <body>
 <header>
@@ -78,7 +79,6 @@
         Téléphone : 01 43 43 43 43
     </address>
 </section>
-
 
 </body>
 </html>
