ajout de la reduction dans les données et ajout du chemin des données

--- a/Page_Cinema/MENU/Admin/menu/admin.html
+++ b/Page_Cinema/MENU/Admin/menu/admin.html
@@ -52,9 +52,10 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../liste/utilisateur/data.php">Utilisateur</a></li>
-                            <li><a class="dropdown-item" href="">Film</a></li>
-                            <li><a class="dropdown-item" href="">Salle</a></li>
+                            <li><a class="dropdown-item" href="../liste/film/data.php">Film</a></li>
+                            <li><a class="dropdown-item" href="../liste/salle/salle.php">Salle</a></li>
                             <li><a class="dropdown-item" href="../liste/reservation/data.php">Reservation</a></li>
+                            <li><a class="dropdown-item" href="../liste/reduction/data.php">Reduction</a></li>
 
                         </ul>
                     </li>
