--- a/Page_Cinema/1/2/3/Admin/3 - AD/3.1 Menu/admin.html
+++ b/Page_Cinema/1/2/3/Admin/3 - AD/3.1 Menu/admin.html
@@ -1,28 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Navbar</title>
-
+    <title>Admin</title>
 
     <!--POLICE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <!-- CSS/JS -->
+
+    <!--CSS/JS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
 
 </head>
 <body class="vh-100 overflow-hidden">
-
+<!--Navbar-->
 <nav class="navbar navbar-black navbar-expand-lg bg-transparent">
     <div class="container-fluid">
         <!--Nom-->
-        <a class="navbar-brand" href="#">Cinema Claude Lelouch</a>
+        <a class="navbar-brand text-white" href="#">Administration</a>
         <!--Acceuil-->
         <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -30,32 +31,38 @@
         <!--Menu-->
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">Menu</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body d-flex flex-column flex-lg-row p-4 p-lg-0">
                 <ul class="navbar-nav justify-content-center
                 align-item-center fs-5 flex-grow-1 pe-3">
                     <li class="nav-item m-2">
-                        <a class="nav-link" href="#">Acceuil</a>
+                        <a class="nav-link text-white" href="../film/film.html">Film</a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link text-white" href="#">Salle</a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link text-white" href="#">Reservation</a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Données
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="liste/utilisateur/data.php">Utilisateur</a></li>
+                            <li><a class="dropdown-item" href="liste/film/data.php">Film</a></li>
+                            <li><a class="dropdown-item" href="liste/salle/salle.php">Salle</a></li>
+                            <li><a class="dropdown-item" href="liste/reservation/data.php">Reservation</a></li>
+                            <li><a class="dropdown-item" href="liste/reduction/data.php">Reduction</a></li>
+                        </ul>
                     </li>
                 </ul>
-                <!--Inscription/Connexion-->
-                <div class="d-flex flex-column flex-lg-row justify-content-center
-                     align-items-center gap-3">
-                    <a href="../CONNEXION_INSCRIPTION/Page_connexion/Cinema.html" class="text-black" >Connexion</a>
-                    <a href="../CONNEXION_INSCRIPTION/Page_inscription/inscription.html" class="text-black
-                      text-decoration-none px-3 py-1 rounded-4"
-                    style="background-color: #ffeaa6ff">Inscription</a>
-                </div>
             </div>
         </div>
     </div>
 </nav>
-
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-lqAszqFRoHDpNS++fVp4jjLw6R/xFpKGJg3i8b5GoP8C5C3ISIJLMP6qA3s3iXJ" crossorigin="anonymous"></script>
 
 </body>
 </html>
